# megascraper

./: .gitignore
.gitea/workflows/: build.yaml
common/helpers/: pyproject.toml
common/helpers/kafka_helpers/: __init__.py  _schemas.py  kafkaconsumer.py  kafkaproducer.py
common/helpers/kafka_helpers/schemas/: scrape_result.json
common/helpers/postgres_helpers/: postgres_connector.py
services/coordinator/: Dockerfile
services/coordinator/src/: Coordinator.py
services/scraper/: Dockerfile
services/scraper/src/: Scraper.py
services/scraper/src/misc/: produce_new_pages.py
services/scraper/src/tasks/: amazon_search_results.py  fb_marketplace_search_results.py
